2002-01-27  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02914]
	* history.c (copyHist): added
	* history.h (copyHist): ditto
	* main.c (goURL0): copyHist(URLHist), push current and anchor URLs
		default set by DefaultURLString

2002-01-26  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02913] wrong table width calculation
	* table.c (set_table_matrix0): refine width calculation

2002-01-26  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02875] rendering a table with inconsistent colspan,rowspan
	* table.c (feed_table_tag): don't clear HTT_X|HTT_Y 
		instead, if set these flags, break the loop

2002-01-26  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02909] wrong table width calculation (sf.net Bug#506949)
	* table.c (correct_table_matrix4): added
	* table.c (set_table_matrix0): use correct_table_matrix4()

2002-01-25  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02908] document code of frame
	* frame.c (renderFrame): save document_code if JP_CHARSET

2002-01-25  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02904]
	* rc.c (N_STR): use cpp stringification

2002-01-25  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02902] mouse inactive after calling some command with ALARM.
	* main.c (SigAlarm): mouse_inactive() and mouse_active()

2002-01-25  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02901] Default URL for GOTO*
	* fm.h (DEFAULT_URL_*): added
	* fm.h (DefaultURLString): added
	* main.c (cmd_loadURL): add arg `referer'
	* main.c (goURL0): 2nd arg is `relative' flag
		check DefaultURLString
		if relative, then current and referer is set
	* main.c (ldhelp): cmd_loadURL arg changes
	* main.c (deletePrevBuf): ditto
	* main.c (cmd_loadBuffer): ditto
	* main.c (adBmark): ditto
	* main.c (follow_map): ditto
	* rc.c (CMT_DEFAULT_URL): added
	* rc.c (defaulturls): added
	* rc.c (params9): add "default_url"

2002-01-25  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
